<resources>
    <string name="app_name">锦尚程</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">退出登录</string>
    <string name="agreement_content">
&#12288;&#12288;广西锦尚程信息科技有限公司作为锦尚程服务的提供商、运营商(以下简称“锦尚程”)，依据《用户服务协议》(以下简称《协议》)的规定为用户提供服务，本协议在锦尚程与用户之间具有合同上的法律效力。请务必认真阅读、充分理解本《协议》中规定的所有权利和限制，并选择接受或者不接受本协议。除非用户接受本《协议》条款，否则用户无权下载、安装或使用本"软件"及其相关服务。用户一旦安装、复制、下载、访问或以其它方式使用本软件产品或成功注册成为用户，将视为对本《协议》的全部条款已充分理解并完全接受，即表示用户同意接受本《协议》各项条款的约束。如果用户不同意本《协议》中的条款，请不要 安装、复制或使用本软件。
\n&#12288;&#12288;一、协议内容及签署
\n&#12288;&#12288;1.1 本协议内容包括协议正文及所有锦尚程已经发布的或将来可能发布的各类规则。所有规则为本协议不可分割的组成部分，与协议正文具有同等法律效力。除另行明确声明外，任何锦尚程及其关联实体提供的服务(以下称为锦尚程平台服务)均受本协议约束。
\n&#12288;&#12288;1.2 用户应当在使用锦尚程平台服务之前认真阅读全部协议内容。如用户对协议有任何疑问的，应向锦尚程咨询。但无论用户事实上是否在使用锦尚程平台服务之前认真阅读了本协议内容，只要用户使用锦尚程平台服务，则本协议即对用户产生约束，届时用户不应以未阅读本协议的内容或者未获得锦尚程对用户问询的解答等理由，主张本协议无效，或要求撤销本协议。
\n&#12288;&#12288;1.3 用户承诺接受并遵守本协议的约定。如果用户不同意本协议的约定，用户有权停止注册/激活程序或停止使用锦尚程平台服务。经注册或使用锦尚程服务即视为对本服务协议的充分理解和接受，如有违反而导致任何法律后果的发生，用户将以自己的名义独立承担相应的 法律责任。
\n&#12288;&#12288;1.4 在本协议履行过程中，锦尚程有权根据情况对本服务协议及各类规则进行修改或制订。一旦本服务协议的内容发生变动，锦尚程将通过网站或公众号等方式公布最新的服务协议，不再向用户作个别通知。变更后的协议和规则一经在网站公布后，立即自动生效。如用户不同意相关变更，有权停止使用锦尚程平台服务。用户继续使用锦尚程平台服务的，则视为用户已接受锦尚程对本服务协议所做的修改，并应遵照修改后的协议执行。
\n&#12288;&#12288;1.5 锦尚程可以依其自主判断暂时停止提供、限制或改变具体服务，只要用户仍然使用锦尚程服务，即表示用户仍然同意本服务协议。
\n&#12288;&#12288;二、用户
\n&#12288;&#12288;2.1 用户资格
\n&#12288;&#12288;2.1.1 用户确认，在用户完成注册程序或以其他锦尚程允许的方式实际使用锦尚程平台服务时，用户应当是具备完全民事权利能力和完全民事行为能力的自然人、法人或其他组织。若用户不具备前述主体资格，则用户及用户的监护人应承担因此而导致的一切后果，且锦尚程有权注销或永久冻结用户的账户，并向用户及用户的监护人索偿。
\n&#12288;&#12288;2.2 用户账户
\n&#12288;&#12288;2.2.1 在用户按照注册页面提示填写信息、阅读并同意本协议且完成全部注册程序后，或在用户按照激活页面提示填写信息、阅读并同意本协议且完成全部激活程序后，或用户以其他 锦尚程允许的方式实际使用锦尚程服务平台时，用户即受本协议约束。用户可以使用用户提供或确认的邮箱、手机号码或者锦尚程允许的其它方式作为登录手段进入锦尚程平台服务。
\n&#12288;&#12288;2.2.2 除非有法律规定或司法裁定，或者符合锦尚程公布的条件，否则用户的登录名、锦尚 程昵称和密码不得以任何方式转让、赠与或继承，并且转让、赠与或继承需提供锦尚程要求的合格的文件材料并根据锦尚程制定的操作流程办理。
\n&#12288;&#12288;2.3 用户信息
\n&#12288;&#12288;2.3.1 用户必须依锦尚程要求提示提供个人真实、最新、有效及完整的资料。用户有义务维持并更新用户的资料，确保其为真实、最新、有效及完整。若用户提供任何错误、虚假、过时或不完整的资料，或者锦尚程依其独立判断怀疑资料为错误、虚假、过时或不完整，锦尚程有权暂停或终止用户的用户资格，并拒绝用户使用锦尚程服务的部份或全部功能。在此情况下，锦尚程不承担任何责任，并且用户同意负担因此所产生的直接或间接的任何支出或损 失。
\n&#12288;&#12288;2.3.2 用户应当准确填写并及时更新用户提供的电子邮件地址、联系电话、联系地址、邮政编码等联系方式，以便锦尚程或其他用户与用户进行有效联系，因通过这些联系方式无法与用户取得联系，导致用户在使用锦尚程平台服务过程中产生任何损失或增加费用的，锦尚程亦不承担任何责任，所有后果应由用户个人单独承担。用户了解并同意，用户有义务保持你提供的联系方式的有效性，如有变更或需要更新的，用户应按锦尚程的要求进行相关操作。
\n&#12288;&#12288;2.3.3 用户了解锦尚程平台上的信息系用户自行发布，且可能存在风险和瑕疵。锦尚程平台 仅作为交易地点。锦尚程平台仅作为用户获取物品或服务信息、物色交易对象，就物品和/ 或服务的交易进行协商及开展交易的场所，但锦尚程无法控制交易所涉及的物品的质量、安全或合法性，商贸信息的真实性或准确性，以及交易各方履行其在贸易协议中各项义务的能力。用户应自行谨慎判断确定相关物品及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。
\n&#12288;&#12288;三、锦尚程平台服务
\n&#12288;&#12288;3.1 锦尚程通过锦尚程平台向用户提供服务，主要包括:车辆信息管理服务、交易信息发布、交易管理服务、客户服务等[T1] ，具体服务以锦尚程当时提供的服务内容为准。因未能完成认证而无法享受锦尚程服务造成的损失，锦尚程不承担任何责任。
\n&#12288;&#12288;3.2 若用户在锦尚程平台交易途中与商家发生纠纷时，任意一方或双方共同提交锦尚程要求 调处，则锦尚程有权根据单方判断做出调处决定，用户了解并同意接受锦尚程的判断和调处 决定。
\n&#12288;&#12288;3.3 用户了解并同意锦尚程有权应政府部门(包括司法及行政部门)的要求，向其提供用户 向锦尚程提供的用户信息和交易记录等必要信息。如用户涉嫌侵犯他人知识产权等合法权益，则锦尚程亦有权在初步判断涉嫌侵权行为存在的情况下，保证权利人对该情况知悉的权利。
\n&#12288;&#12288;3.4 用户在使用锦尚程平台服务过程中，所产生的应纳税赋，以及一切硬件、软件、服务及其它方面的费用，均由用户独自承担。
\n&#12288;&#12288;3.5 服务可包含对其他网站或内容或资源的超级链接。锦尚程可能并不控制由锦尚程以外的公司或个人提供的任何网站或资源。
\n&#12288;&#12288;3.6 用户认知并同意，锦尚程不对该等外部网站或资源的可用性负责，亦不对该等网络或资源上的或从该等网站或资源获得的任何广告、产品或其他材料加以认可。
\n&#12288;&#12288;3.7 用户认知并同意，锦尚程不对由于用户由于那些外部的网站或资源的可用性或用户对该等网站或资源上的或从该等网站或资源获得的任何广告、产品或其他材料的完整性、准确性或存在的信赖而发生的任何损失或损害承担责任。用户在使用过程中应注意仔细辨别，保护自我权益，由此导致的用户方的所有损失，锦尚程亦不承担任何责任。同时，经由锦尚程服务的使用下载或取得任何资料，应由用户自行考量且自负风险，因资料的下载而导致的任何损坏由用户自行承担。
\n&#12288;&#12288;四、隐私条款及授权条款
\n&#12288;&#12288;4.1 锦尚程对于用户提供的、锦尚程自行收集的、经认证的个人信息将按照本协议予以保护、使用或者披露。未经锦尚程事先书面同意，用户不得转让其在本协议项下的任何权利和义务。
\n&#12288;&#12288;4.2 锦尚程可能自公开及私人资料来源收集用户的额外资料，以更好地掌握用户的情况，并为用户度身订造锦尚程服务、解决争议等。
\n&#12288;&#12288;4.3 用户同意，对于用户所提供的全部信息与资料以及用户在使用锦尚程提供的车联网服务的过程中锦尚程搜集整理后形成的有关数据，用户授予锦尚程及锦尚程关联实体独家的、全 球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。
\n&#12288;&#12288;4.4 为方便用户使用锦尚程及锦尚程相关服务或其他组织的服务(以下称其他服务)，用户同意并授权锦尚程将用户在账户注册/激活、使用锦尚程服务过程中提供、形成的信息传递给向用户提供其他服务的组织，或从提供其他服务的组织获取用户在注册/激活、使用其他服务期间提供、形成的信息。用户同意不会因此追究锦尚程或其关联实体的责任。
\n&#12288;&#12288;4.5 锦尚程采用行业标准惯例以保护用户的资料。用户因履行本协议提供给锦尚程的信息，锦尚程不会恶意出售或免费共享给任何第三方，以下情况除外:
\n&#12288;&#12288;4.5.1 提供独立服务且仅要求服务相关的必要信息的供应商，如印刷厂、邮递公司等;
\n&#12288;&#12288;4.5.2 具有合法调阅信息权限并从合法渠道调阅信息的政府部门或其他机构，如公安机关、 法院;
\n&#12288;&#12288;4.5.3 广西锦尚程信息科技有限公司与驾图信科技有限公司是战略合作企业，双方共同获取用户车辆信息，共享用户数据;
\n&#12288;&#12288;4.5.4 锦尚程的关联实体;
\n&#12288;&#12288;4.5.5 经用户或用户授权代表同意的第三方。
\n&#12288;&#12288;五、许可范围
\n&#12288;&#12288;5.1 下载、安装和使用:本软件为免费软件，用户可以非商业性、无限制数量地下载、安装 及使用本软件。
\n&#12288;&#12288;5.2 复制、分发和传播:用户可以非商业性、无限制数量地复制、分发和传播本软件产品。但必须保证每一份复制、分发和传播都是完整和真实的,包括所有有关本软件产品的软件、 电子文档,版权和商标，亦包括本协议。
\n&#12288;&#12288;六、知识产权的保护
\n&#12288;&#12288;6.1 锦尚程平台上所有内容，包括但不限于著作、图片、档案、资讯、资料、平台架构、平台画面的安排、网页设计，均由锦尚程或其他权利人依法拥有其知识产权，包括但不限于商标权、专利权、著作权、商业秘密等。
\n&#12288;&#12288;6.2 非经锦尚程或其他权利人书面同意，任何人不得擅自使用、修改、复制、公开传播、改 变、散布、发行或公开发表锦尚程平台程序或内容。
\n&#12288;&#12288;6.3 用户未经锦尚程的明确书面同意不许下载(除了页面缓存)或修改平台或其任何部分。 用户不得对锦尚程平台或其内容进行转售或商业利用;不得收集和利用产品目录、说明和价 格;不得对锦尚程平台或其内容进行任何衍生利用;不得为其他商业利益而下载或拷贝账户信息或使用任何数据采集、Robots或类似的数据收集和摘录工具。未经锦尚程的书面许可，严禁对锦尚程平台的内容进行系统获取以直接或间接创建或编辑文集、汇编、数据库或人名 地址录(无论是否通过 Robots、Spiders、自动仪器或手工操作)。另外，严禁为任何未经本使用条件明确允许的目的而使用锦尚程平台上的内容和材料。
\n&#12288;&#12288;6.4 禁止反向工程、反向编译和反向汇编:用户不得对本软件产品进行反向工程 (ReverseEngineer)、反向编译(Decompile)或反向汇编(Disassemble)，同时不得改动编译在程序文件内部的任何资源。除法律、法规明文规定允许上述活动外，用户必须遵守此协议限制。
\n&#12288;&#12288;6.5 尊重知识产权是用户应尽的义务，如有违反，用户应对锦尚程承担损害赔偿等法律责任。 本条款的有效期为法律规定的最高期限。
\n&#12288;&#12288;七、权利限制
\n&#12288;&#12288;7.1 在下列情况下用户不可使用服务且不能接受本条款:
\n&#12288;&#12288;7.1.1 用户未达到与锦尚程订立有约束力的合同的法定年龄。
\n&#12288;&#12288;7.1.2 根据中国或其他国家(包括用户居住的或用户从那里使用服务的国家)的法律，用户是被禁止接受服务的人。
\n&#12288;&#12288;八、用户的守法义务及承诺
\n&#12288;&#12288;8.1 用户承诺绝不为任何非法目的或以任何非法方式使用锦尚程服务，并承诺遵守中国相关法律、法规及一切使用互联网之国际惯例，遵守所有与锦尚程服务有关的网络协议、规则和程序。
\n&#12288;&#12288;8.2 用户同意并保证不得利用锦尚程服务从事侵害他人权益或违法之行为，若有违反者应负所有法律责任。上述行为包括但不限于:
\n&#12288;&#12288;8.2.1 反对宪法所确定的基本原则，危害国家安全、泄漏国家秘密、颠覆国家政权、破坏国家统一的。
\n&#12288;&#12288;8.2.2 侵害他人名誉、隐私权、商业秘密、商标权、著作权、专利权、其他知识产权及其他权益。
\n&#12288;&#12288;8.2.3 违反依法律或合约所应负之保密义务。
\n&#12288;&#12288;8.2.4 冒用他人名义使用锦尚程服务。
\n&#12288;&#12288;8.2.5 从事任何可能含有电脑病毒或是可能侵害锦尚程服务系統、资料等行为。
\n&#12288;&#12288;8.2.6 利用锦尚程服务系统进行可能对互联网或移动网正常运转造成不利影响之行为。
\n&#12288;&#12288;8.2.7 侵犯锦尚程的商业利益，包括但不限于发布非经锦尚程许可的商业广告。
\n&#12288;&#12288;8.2.8 其他锦尚程有正当理由认为不适当之行为。
\n&#12288;&#12288;九、服务中断或故障
\n&#12288;&#12288;9.1 用户同意，基于互联网的特殊性，锦尚程不担保服务不会中断，也不担保服务的及时性和/或安全性。系统因相关状况无法正常运作，使用户无法使用任何锦尚程服务或使用任何锦尚程服务时受到任何影响时，锦尚程对用户或第三方不负任何责任，前述状况包括但不限于:
\n&#12288;&#12288;9.1.1 锦尚程系统停机维护期间。
\n&#12288;&#12288;9.1.2 电信设备出现故障不能进行数据传输的。
\n&#12288;&#12288;9.1.3 由于黑客攻击、网络供应商技术调整或故障、网站升级等原因而造成的锦尚程服务中断或延迟。
\n&#12288;&#12288;9.1.4 因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成锦尚程系统障碍不能执行业务的。
\n&#12288;&#12288;十、 条款的法律适用及争端解决
\n&#12288;&#12288;10.1 本协议是由用户与锦尚程共同签订的，适用于用户在锦尚程的全部活动。本协议内容包括但不限于协议正文条款及已经发布的或将来可能发布的各类规则，所有条款和规则为协议不可分割的一部分，与协议正文具有同等法律效力。
\n&#12288;&#12288;10.2 本协议不涉及用户与锦尚程的其他会员之间，因网上交易而产生的法律关系及法律纠纷。但用户在此同意将全面接受并履行与锦尚程其他会员在锦尚程签订的任何电子法律文本，并承诺按照该法律文本享有和/或放弃相应的权利、承担和/或豁免相应的义务。
\n&#12288;&#12288;10.3 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，则应认为该条款可与本协议相分割，并可被尽可能接近各方意图的、能够保留本协议要求的经济目的的、有效的新条款所取代，而且，在此情况下，本协议的其他条款仍然完全有效并具有约束力。
\n&#12288;&#12288;10.4 本协议及其修订的有效性、履行与本协议及其修订效力有关的所有事宜，将受中国法律管辖，任何争议仅适用中国法律。
\n&#12288;&#12288;10.5 因本协议所引起的会员与锦尚程的任何纠纷或争议，首先应友好协商解决。协商不成的，用户在此完全同意将纠纷或争议提交广西锦尚程信息科技有限公司所在地有管辖权的人民法院诉讼解决。
\n&#12288;&#12288;十一、其他说明
\n&#12288;&#12288;11.1 用户自锦尚程及锦尚程工作人员或经由锦尚程服务取得的建议或资讯，无论其为书面或口头，均不构成锦尚程对锦尚程服务的任何保证。
\n&#12288;&#12288;11.2 用户同意，用户服务的暂停、中断或终止不代表用户责任的终止，用户仍应对使用锦尚程服务期间的行为承担可能的违约或损害赔偿责任，同时锦尚程仍可保有用户的相关信息。
\n&#12288;&#12288;11.3 锦尚程对于用户的通知及任何其他的协议、告示或其他关于用户使用个人账号及服务的通知，用户同意锦尚程可通过锦尚程平台公告、电子邮件、手机短信、无线通讯装置等电子方式或常规的信件传递等方式进行，该等通知于发送之日视为已送达收件人。因信息传输等原因导致用户未在前述通知发出当日收到该等通知的，锦尚程不承担任何责任。
</string>
    <string name="carfragment">CarFragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登陆</string>
    <string name="prompt_password">请输入短信验证码</string>
    <string name="login_hint">请输入手机号</string>
    <string name="countDownHint">%ss后重新获取</string>
    <string name="acceptLicense">《锦尚程软件服务协议》</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gestureNote">请设置手势密码\n 以便保证您的信息安全</string>
    <string name="cst_platform_pull_to_refresh_pull_label">向下加载更多</string>
    <string name="cst_platform_pull_to_refresh_release_label">松开加载更多</string>
    <string name="cst_platform_pull_to_refresh_refreshing_label">加载中...</string>
    <string name="cst_platform_pull_to_refresh_from_bottom_pull_label">向上拉加载更多</string>
    <string name="cst_platform_pull_to_refresh_from_bottom_release_label">松开加载更多</string>
    <string name="cst_platform_pull_to_refresh_from_bottom_refreshing_label">加载中...</string>
    <string name="cst_platform_car_speed">%dkm/h</string>
    <string name="cst_platform_car_rpm">%srpm</string>
    <string name="cst_platform_no_net">无网络</string>
    <string name="cst_platform_no_nlocation">无法定位</string>
    <string name="detection_fire_detail_tv">以下项需要在点火状态才能读取数值</string>
    <string name="detection_fire_statue_tv">以下项为熄火前数据,如要查看当前数据请在点火情况下检测。</string>
    <string name="cst_platform_detect_type_fault">车辆故障</string>
    <string name="cst_platform_detect_type_battery">汽车蓄电池</string>
    <string name="cst_platform_data_item_title_enc"> 冷却液温度</string>
    <string name="cst_platform_detect_type_oil">剩余油量</string>
    <string name="cst_platform_content_desc_default">image</string>
    <string name="platform_back">  </string>
    <string name="cst_platform_detect_title">检测</string>
    <string name="cst_platform_detect_time_days">距离上次检测已过去%d天</string>
    <string name="cst_platform_detect_time_hours">距离上次检测已过去%d小时</string>
    <string name="cst_platform_detect_time_other">近24小时数据</string>
    <string name="cst_platform_detect_normal_change_subtitle">一切正常，请放心出行！</string>
    <string name="cst_platform_detect_deal_change_subtitle">警告！紧急事项，请及时处理！</string>
    <string name="cst_platform_detect_notice_change_subtitle">注意！隐患事项，请关注！</string>
    <string name="cst_platform_ok">确定</string>
    <string name="cst_platform_request_outtime">请求超时，请检查你的网络环境</string>
    <string name="cst_platform_current_value">当前值</string>
    <string name="cst_platform_scope_cooling_fluid">正常范围 -40℃-110℃</string>
    <string name="cst_platform_cause_cooling_fluid">1.冷却液减少,膨胀水壶无冷却液，系统有漏水\n2.冷却液温度传感器信号异常。</string>
    <string name="cst_platform_effect_cooling_fluid">1.油耗增加\n2.动力下降。</string>
    <string name="cst_platform_advice_cooling_fluid">1.定时更换/添加冷却液\n2.出现水温异常及时检查处理。</string>
    <string name="cst_platform_scope_battery_voltage">正常范围 11.5v-15.0v</string>
    <string name="cst_platform_cause_battery_voltage">蓄电池老化，或者在熄灭状态下车灯，音响未关，短时间内电量过大，蓄电量不足</string>
    <string name="cst_platform_effect_battery_voltage">电池耗尽，导致车辆不能正常启动</string>
    <string name="cst_platform_advice_battery_voltage">在启动状态下，充电一段时间，再观察蓄电池电量，或者就近的维修店进行专业检测</string>
    <string name="cst_platform_exception_error">以下故障需要及时处理，如需帮助，请联系驾图车师傅</string>
    <string name="cst_platform_exception_warn">以下故障对车辆没有直接伤害，如需疑问，请联系驾图车师傅</string>
    <string name="cst_platform_failure_code">故障码</string>
    <string name="cst_platform_no_cause">暂无明确的原因分析</string>
    <string name="cst_platform_no_consequence">暂无可能导致的后果分析</string>
    <string name="cst_platform_no_advice">驾图车师傅暂无处理建议</string>
    <string name="cst_platform_detect_back">返回</string>
    <string name="cst_platform_detect_emergency_fault">紧急故障</string>
    <string name="cst_platform_detect_battery_voltage">电瓶电压</string>
    <string name="cst_platform_detect_automobile_storage_battery">汽车蓄电池</string>
    <string name="cst_platform_detect_battery_voltage_lower">电瓶电压过低</string>
    <string name="cst_platform_detect_battery_voltage_higher">电瓶电压过高</string>
    <string name="userName">姓名：</string>
    <string name="phoneNum">手机号：</string>
    <string name="level">会员等级：</string>
</resources>