<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundGary">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:padding="15dp">

            <ImageView
                android:id="@+id/iv_headImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@id/top_root"
                app:layout_constraintLeft_toLeftOf="@id/top_root"
                app:layout_constraintTop_toTopOf="@id/top_root" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/top_root"
                app:layout_constraintLeft_toRightOf="@id/iv_headImg"
                app:layout_constraintRight_toRightOf="@id/top_root"
                app:layout_constraintTop_toTopOf="@id/iv_headImg"
                app:layout_constraintVertical_bias="0">


                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="3dp"
                    android:text="@string/userName"
                    android:textAllCaps="false"
                    android:textColor="@color/textBlack"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="3dp"
                    android:text="@string/phoneNum"

                    android:textAllCaps="false"
                    android:textColor="@color/textBlack"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="3dp"
                    android:text="@string/level"
                    android:textAllCaps="false"
                    android:textColor="@color/textBlack"
                    android:textSize="13sp" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintTop_toBottomOf="@id/top_root">

            <TextView
                android:id="@+id/tv_people"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_people"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="我的人脉" />

            <TextView
                android:id="@+id/tv_money"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_money"

                android:drawableRight="@mipmap/ic_arrow"
                android:text="我的收益" />

            <TextView
                android:id="@+id/tv_privacy"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_privacy"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="隐私管理" />

            <TextView
                android:id="@+id/tv_address"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_location"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="地址管理" />

            <TextView
                android:id="@+id/tv_car"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/iv_m_car"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="车辆管理" />

            <TextView
                android:id="@+id/tv_notification"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_about"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="通知管理" />

            <TextView
                android:id="@+id/tv_order"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_order"
                android:drawableRight="@mipmap/ic_arrow"
                android:text="我的订单" />

            <TextView
                android:id="@+id/tv_card"
                style="@style/mine_item"
                android:drawableLeft="@mipmap/ic_m_card"

                android:drawableRight="@mipmap/ic_arrow"
                android:text="我的银行卡" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_about_us"
                    style="@style/mine_item"
                    android:drawableLeft="@mipmap/ic_m_about"
                    android:drawableRight="@mipmap/ic_arrow"
                    android:text="关于我们" />

                <ImageView
                    android:id="@+id/iv_redPoint"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginRight="40dp"
                    android:src="@mipmap/ic_red_point"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/tv_callCustomerService"
            style="@style/textSmallest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:padding="@dimen/padding_top"
            android:text="联系客服:0771-4957133"
            android:textColor="@color/darkBg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>